Proje bir kaç eksikle birlikte yarı tamamlandı.

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.HomeFragment">
+    tools:context=".fragments.home.HomeFragment">
 
     <FrameLayout
-        android:id="@+id/progres_home_frame"
+        android:id="@+id/homeProgressFrame_Fl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -30,12 +30,43 @@
 
     </FrameLayout>
 
-    <ListView
-        android:id="@+id/survey_list"
-        android:layout_width="match_parent"
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/homeWarning_Tv"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="8dp" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="55dp"
+        android:gravity="center"
+        android:text="Seçtiğiniz kategoride\nanket bulunamadı."
+        android:textColor="@color/colorBlue"
+        android:textSize="16sp"
+        android:textStyle="italic" />
+
+    <com.thomashaertel.widget.MultiSpinner
+        android:id="@+id/homeMultispinner_Sp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="5dp" />
+
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/homeViewpager_Vp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="55dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp" />
+
+    <TextView
+        android:id="@+id/homePage_Tv"
+        android:layout_width="75dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center|bottom"
+        android:gravity="center"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        android:textStyle="italic" />
 
 </FrameLayout>
