--- a/app/src/main/res/layout/fragment_user_profile_bence.xml
+++ b/app/src/main/res/layout/fragment_user_profile_bence.xml
@@ -3,12 +3,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.UserProfileBenceFragment">
+    tools:context=".fragments.profile.tab.UserProfileBenceFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <FrameLayout
+        android:id="@+id/userprofilebenceFrame_Fl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_marginTop="50dp"
+            android:text="Verileriniz yükleniyor,\nlütfen bekleyiniz."
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textSize="16sp"
+            android:textStyle="italic" />
+
+    </FrameLayout>
+
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/userprofilebenceWarning_Tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="55dp"
+        android:gravity="center"
+        android:text="Kullanıcı hesabı gizli ve siz\nonu takip etmiyorsunuz."
+        android:textColor="@color/colorBlue"
+        android:textSize="16sp"
+        android:textStyle="italic" />
+
+    <ListView
+        android:id="@+id/userprofilebenceSurveys_Lv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="8dp"
+        android:scrollbars="vertical" />
 
 </FrameLayout>
