--- a/app/src/main/res/layout/fragment_new_profile.xml
+++ b/app/src/main/res/layout/fragment_new_profile.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".fragments.profile.UserProfileFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragments.profile.NewProfileFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,38 +13,19 @@
         android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
             app:cardBackgroundColor="@android:color/white"
             app:cardCornerRadius="5dp"
-            app:cardElevation="2dp">
+            app:cardElevation="2dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp">
 
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <Button
-                    android:id="@+id/userprofileLogout_Btn"
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="end"
-                    android:layout_margin="5dp"
-                    android:background="@drawable/ic_exit_to_app_black_24dp" />
-
-                <Button
-                    android:id="@+id/userprofileEdit_Btn"
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="end"
-                    android:layout_marginTop="45dp"
-                    android:layout_marginEnd="5dp"
-                    android:background="@drawable/ic_edit" />
-
                 <ImageView
-                    android:id="@+id/userprofileUserimage_Iv"
+                    android:id="@+id/newprofileUserImage_Iv"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:src="@drawable/ic_account_circle_black_24dp" />
@@ -59,7 +39,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/userprofileUsername_Tv"
+                        android:id="@+id/newprofileFullname_Tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
@@ -81,28 +61,23 @@
                         android:layout_height="70dp">
 
                         <TextView
-                            android:id="@+id/userprofileFollowingNumber_Tv"
-
+                            android:id="@+id/newprofileFollowing_Tv"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_gravity="center"
-                            android:layout_marginBottom="10dp"
                             android:gravity="center"
                             android:text="0"
                             android:textColor="@color/colorBlue"
                             android:textSize="16sp" />
 
-                        <Button
-                            android:id="@+id/userprofileFollowing_Btn"
+                        <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center|bottom"
-                            android:layout_marginTop="35dp"
                             android:gravity="center"
                             android:text="Takip"
-                            android:textAllCaps="false"
                             android:textColor="@android:color/black"
-                            android:textSize="12sp" />
+                            android:textSize="13sp" />
 
                     </FrameLayout>
 
@@ -111,59 +86,26 @@
                         android:layout_height="70dp">
 
                         <TextView
-                            android:id="@+id/userprofileFollowerNumber_Tv"
+                            android:id="@+id/newprofileFollower_Tv"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_gravity="center"
-                            android:layout_marginBottom="10dp"
                             android:gravity="center"
                             android:text="0"
                             android:textColor="@color/colorBlue"
                             android:textSize="16sp" />
 
-                        <Button
-                            android:id="@+id/userprofileFollower_Btn"
+                        <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center|bottom"
-                            android:layout_marginTop="35dp"
+                            android:layout_marginTop="55dp"
                             android:gravity="center"
                             android:text="Takipçi"
-                            android:textAllCaps="false"
                             android:textColor="@android:color/black"
-                            android:textSize="12sp" />
+                            android:textSize="13sp" />
 
                     </FrameLayout>
-
-                    <FrameLayout
-                        android:layout_width="70dp"
-                        android:layout_height="70dp">
-
-                        <TextView
-                            android:id="@+id/userprofileRequestNumber_Tv"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="center"
-                            android:layout_marginBottom="10dp"
-                            android:gravity="center"
-                            android:text="0"
-                            android:textColor="@color/colorBlue"
-                            android:textSize="16sp" />
-
-                        <Button
-                            android:id="@+id/userprofileRequest_Btn"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center|bottom"
-                            android:layout_marginTop="35dp"
-                            android:gravity="center"
-                            android:text="İstek"
-                            android:textAllCaps="false"
-                            android:textColor="@android:color/black"
-                            android:textSize="12sp" />
-
-                    </FrameLayout>
-
 
                 </LinearLayout>
 
@@ -172,12 +114,12 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
             app:cardBackgroundColor="@android:color/white"
             app:cardCornerRadius="5dp"
-            app:cardElevation="2dp">
+            app:cardElevation="2dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp">
 
 
             <LinearLayout
@@ -191,7 +133,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/userprofileSurvey_Tv"
+                        android:id="@+id/newprofileSurveys_Tv"
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
                         android:layout_margin="5dp"
@@ -201,7 +143,7 @@
                         android:textColor="@color/colorGray" />
 
                     <TextView
-                        android:id="@+id/userprofileSence_Tv"
+                        android:id="@+id/newprofileSence_Tv"
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
                         android:layout_margin="5dp"
@@ -211,7 +153,7 @@
                         android:textColor="@color/colorGray" />
 
                     <TextView
-                        android:id="@+id/userprofileBence_Tv"
+                        android:id="@+id/newprofileBence_Tv"
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
                         android:layout_margin="5dp"
@@ -222,13 +164,14 @@
 
                 </LinearLayout>
 
+
                 <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp">
 
                     <androidx.viewpager.widget.ViewPager
-                        android:id="@+id/userprofileViewPager"
+                        android:id="@+id/newprofileUserProfile_Vp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
@@ -242,4 +185,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</FrameLayout>
