--- a/app/src/main/res/layout/fragment_old_profile.xml
+++ b/app/src/main/res/layout/fragment_old_profile.xml
@@ -3,9 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.profile.ProfileFragment">
+    tools:context=".fragments.profile.OldProfileFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -17,7 +16,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/profilePhoto_Iv"
+                android:id="@+id/oldprofileUserImage_Iv"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_gravity="center"
@@ -26,7 +25,7 @@
                 android:src="@drawable/ic_account_circle_black_24dp" />
 
             <TextView
-                android:id="@+id/profileName_Tv"
+                android:id="@+id/oldprofileUsername_Tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
@@ -39,30 +38,28 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/followers_Btn"
+                    android:id="@+id/oldprofileFollower_Btn"
                     style="@style/Widget.MaterialComponents.Button.TextButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="8dp"
                     android:layout_weight="1"
-                    android:background="@color/profile_Btn"
-                    android:text="@string/followers_Btn"
+                    android:background="@color/profileNumber_Btn"
                     android:textAllCaps="false"
                     android:textColor="@android:color/black"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:text="@string/followers_Btn" />
 
                 <Button
-                    android:id="@+id/followed_Btn"
+                    android:id="@+id/oldprofileFollowing_Btn"
                     style="@style/Widget.MaterialComponents.Button.TextButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
                     android:layout_weight="1"
-                    android:background="@color/profile_Btn"
-                    android:text="@string/followed_Btn"
+                    android:background="@color/profileNumber_Btn"
                     android:textAllCaps="false"
                     android:textColor="@android:color/black"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:text="@string/followed_Btn" />
             </LinearLayout>
         </LinearLayout>
 
@@ -80,22 +77,19 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/ongoingPoll_Btn"
+                    android:id="@+id/oldprofileOngoingSurvey_Btn"
                     style="?android:attr/buttonBarStyle"
                     android:layout_width="341dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:background="@color/profile_Btn"
-                    android:text="@string/ongoingPoll_Btn"
-                    tools:layout_marginLeft="0dp" />
+                    android:text="@string/ongoingPoll_Btn" />
 
                 <Button
-                    android:id="@+id/numberOngoingPoll_Btn"
+                    android:id="@+id/oldprofileOngoingNumber_Btn"
                     style="?android:attr/buttonBarStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
                     android:layout_weight="1"
                     android:background="@color/profileNumber_Btn" />
 
@@ -108,22 +102,20 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/completedPoll_Btn"
+                    android:id="@+id/oldprofileCompletedSurvey_Btn"
                     style="?android:attr/buttonBarStyle"
                     android:layout_width="341dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:background="@color/profile_Btn"
                     android:elevation="0dp"
                     android:text="@string/completedPoll_Btn" />
 
                 <Button
-                    android:id="@+id/numberCompletedPoll_Btn"
+                    android:id="@+id/oldprofileCompletedNumber_Btn"
                     style="?android:attr/buttonBarStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
                     android:layout_weight="1"
                     android:background="@color/profileNumber_Btn" />
 
@@ -136,30 +128,27 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/votedPoll_Btn"
+                    android:id="@+id/oldprofileVotedSurvey_Btn"
                     style="?android:attr/buttonBarStyle"
                     android:layout_width="341dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:background="@color/profile_Btn"
                     android:clickable="false"
                     android:text="@string/votedPoll_Btn" />
 
                 <Button
-                    android:id="@+id/numberVotedPoll_Btn"
+                    android:id="@+id/oldprofileVotedNumber_Btn"
                     style="?android:attr/buttonBarStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
                     android:layout_weight="1"
-                    android:background="@color/profileNumber_Btn"
-                    android:clickable="false" />
+                    android:clickable="false"
+                    android:background="@color/profileNumber_Btn" />
 
             </LinearLayout>
         </LinearLayout>
 
     </RelativeLayout>
-
 
 </FrameLayout>
