--- a/app/src/main/res/layout/fragment_survey.xml
+++ b/app/src/main/res/layout/fragment_survey.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.SurveyFragment">
+    tools:context=".fragments.survey.SurveyFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
