--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-  <resources>
+<resources>
     <color name="profileNumber_Btn">#95B0B4</color>
     <color name="profile_Btn">#609DA7</color>
     <color name="textColor">#0C0505</color>
     <color name="colorPrimary">#3D61E2</color>
     <color name="colorPrimaryDark">#393739</color>
     <color name="colorAccent">#C3BEC0</color>
+    <color name="editProfileColor">#DADADA</color>
+
+    <color name="colorBlue">#0B29C0</color>
+    <color name="colorGray">#5C5C5A</color>
     <color name="colorBlack">#000000</color>
-      <color name="editProfileColor">#DADADA</color>
-  </resources>
+
+
+    <color name="colorRed">@android:color/holo_red_dark</color>
+    <color name="colorGreen">@android:color/holo_green_dark</color>
+    <color name="colorYellow">#D5D51D</color>
+</resources>
