--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -12,7 +12,7 @@
         android:layout_margin="10dp"
         android:orientation="vertical">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/editUserImage_Iv"
             android:layout_width="match_parent"
             android:layout_height="186dp"
