--- a/app/src/main/res/layout/fragment_old_profile.xml
+++ b/app/src/main/res/layout/fragment_old_profile.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/oldprofileUserImage_Iv"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
