--- a/app/src/main/res/layout/fragment_other_profile.xml
+++ b/app/src/main/res/layout/fragment_other_profile.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.profile.OldProfileFragment">
+    tools:context=".fragments.profile.OtherProfileFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             android:orientation="vertical">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/oldprofileUserImage_Iv"
+                android:id="@+id/otherprofileUserImage_Iv"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_gravity="center"
@@ -25,7 +25,7 @@
                 android:src="@drawable/ic_account_circle_black_24dp" />
 
             <TextView
-                android:id="@+id/oldprofileUsername_Tv"
+                android:id="@+id/otherprofileUsername_Tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
@@ -33,34 +33,69 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:gravity="center"
                 android:orientation="horizontal">
 
-                <Button
-                    android:id="@+id/oldprofileFollower_Btn"
-                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@color/profileNumber_Btn"
-                    android:textAllCaps="false"
-                    android:textColor="@android:color/black"
-                    android:textSize="14sp"
-                    android:text="@string/followers_Btn" />
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/otherprofileFollowerNumber"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
 
-                <Button
-                    android:id="@+id/oldprofileFollowing_Btn"
-                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    <Button
+                        android:id="@+id/otherprofileFollower_Btn"
+                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:background="@color/profileNumber_Btn"
+                        android:text="@string/followers_Btn"
+                        android:textAllCaps="false"
+                        android:textColor="@android:color/black"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@color/profileNumber_Btn"
-                    android:textAllCaps="false"
-                    android:textColor="@android:color/black"
-                    android:textSize="14sp"
-                    android:text="@string/followed_Btn" />
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/otherprofileFollowingNumber"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <Button
+                        android:id="@+id/otherprofileFollowing_Btn"
+                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:background="@color/profileNumber_Btn"
+                        android:text="@string/followed_Btn"
+                        android:textAllCaps="false"
+                        android:textColor="@android:color/black"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
+
             </LinearLayout>
+
+            <Button
+                android:id="@+id/otherprofileFollow_Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:background="@color/profileNumber_Btn"
+                android:textColor="@color/colorBlack" />
         </LinearLayout>
 
         <LinearLayout
@@ -77,7 +112,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/oldprofileOngoingSurvey_Btn"
+                    android:id="@+id/otherprofileOngoingSurvey_Btn"
                     style="?android:attr/buttonBarStyle"
                     android:layout_width="341dp"
                     android:layout_height="wrap_content"
@@ -86,7 +121,7 @@
                     android:text="@string/ongoingPoll_Btn" />
 
                 <Button
-                    android:id="@+id/oldprofileOngoingNumber_Btn"
+                    android:id="@+id/otherprofileOngoingNumber_Btn"
                     style="?android:attr/buttonBarStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -102,7 +137,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/oldprofileCompletedSurvey_Btn"
+                    android:id="@+id/otherprofileCompletedSurvey_Btn"
                     style="?android:attr/buttonBarStyle"
                     android:layout_width="341dp"
                     android:layout_height="wrap_content"
@@ -112,7 +147,7 @@
                     android:text="@string/completedPoll_Btn" />
 
                 <Button
-                    android:id="@+id/oldprofileCompletedNumber_Btn"
+                    android:id="@+id/otherprofileCompletedNumber_Btn"
                     style="?android:attr/buttonBarStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -128,7 +163,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/oldprofileVotedSurvey_Btn"
+                    android:id="@+id/otherprofileVotedSurvey_Btn"
                     style="?android:attr/buttonBarStyle"
                     android:layout_width="341dp"
                     android:layout_height="wrap_content"
@@ -138,13 +173,13 @@
                     android:text="@string/votedPoll_Btn" />
 
                 <Button
-                    android:id="@+id/oldprofileVotedNumber_Btn"
+                    android:id="@+id/otherprofileVotedNumber_Btn"
                     style="?android:attr/buttonBarStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:clickable="false"
-                    android:background="@color/profileNumber_Btn" />
+                    android:background="@color/profileNumber_Btn"
+                    android:clickable="false" />
 
             </LinearLayout>
         </LinearLayout>
