--- a/app/src/main/res/layout/list_view_item_survey.xml
+++ b/app/src/main/res/layout/list_view_item_survey.xml
@@ -91,8 +91,8 @@
 
                                 <ImageView
                                     android:id="@+id/surveyFirstImage_Iv"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="200dp"
+                                    android:layout_width="120dp"
+                                    android:layout_height="120dp"
                                     android:layout_gravity="center"
                                     android:scaleType="centerInside"
                                     android:src="@mipmap/ic_launcher" />
@@ -124,8 +124,8 @@
 
                                 <ImageView
                                     android:id="@+id/surveySecondImage_Iv"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="200dp"
+                                    android:layout_width="120dp"
+                                    android:layout_height="120dp"
                                     android:layout_gravity="center"
                                     android:scaleType="centerInside"
                                     android:src="@mipmap/ic_launcher" />
