--- a/app/src/main/res/layout/list_view_item_sence_survey.xml
+++ b/app/src/main/res/layout/list_view_item_sence_survey.xml
@@ -172,10 +172,18 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
-
                         <TextView
-                            android:id="@+id/senceSurveyTime"
-                            android:layout_width="0dp"
+                            android:id="@+id/sencesurveyVote_Tv"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="2dp"
+                            android:layout_weight="@integer/google_play_services_version"
+                            android:text="Oylama yapılmadı"
+                            android:textColor="@android:color/black"
+                            android:textStyle="italic" />
+                        <TextView
+                            android:id="@+id/senceSurveyTime_Tv"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_margin="2dp"
                             android:layout_weight="@integer/google_play_services_version"
