--- a/app/src/main/res/layout/fragment_survey.xml
+++ b/app/src/main/res/layout/fragment_survey.xml
@@ -84,7 +84,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:padding="10dp"
-                android:text="Gizli mi ?" />
+                android:text="@string/surveySecret" />
 
             <LinearLayout
                 android:layout_width="match_parent"
