--- a/app/src/main/res/layout/fragment_survey.xml
+++ b/app/src/main/res/layout/fragment_survey.xml
@@ -66,7 +66,7 @@
                     android:layout_weight="@integer/google_play_services_version"
                     android:padding="8dp"
                     android:scaleType="centerInside"
-                    android:src="@mipmap/ic_launcher" />
+                    android:src="@mipmap/ic_photo" />
 
                 <ImageView
                     android:id="@+id/addSecondImage_Iv"
@@ -76,7 +76,7 @@
                     android:layout_weight="@integer/google_play_services_version"
                     android:padding="8dp"
                     android:scaleType="centerInside"
-                    android:src="@mipmap/ic_launcher" />
+                    android:src="@mipmap/ic_photo" />
             </LinearLayout>
 
             <Switch
