--- a/app/src/main/res/layout/list_view_item_user_survey.xml
+++ b/app/src/main/res/layout/list_view_item_user_survey.xml
@@ -88,7 +88,7 @@
                                     android:layout_height="200dp"
                                     android:layout_gravity="center"
                                     android:scaleType="centerInside"
-                                    android:src="@mipmap/ic_launcher" />
+                                    android:src="@mipmap/ic_photo" />
 
                             </FrameLayout>
 
@@ -114,7 +114,7 @@
                                     android:layout_height="200dp"
                                     android:layout_gravity="center"
                                     android:scaleType="centerInside"
-                                    android:src="@mipmap/ic_launcher" />
+                                    android:src="@mipmap/ic_photo" />
 
                             </FrameLayout>
 
