--- a/app/src/main/res/layout/list_view_item_user_request.xml
+++ b/app/src/main/res/layout/list_view_item_user_request.xml
@@ -8,7 +8,7 @@
         android:id="@+id/userrequestUserImage"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@drawable/ic_account_circle_black_24dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
