--- a/app/src/main/res/layout/fragment_home_child.xml
+++ b/app/src/main/res/layout/fragment_home_child.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.home.HomeChildFragment">
 
     <androidx.cardview.widget.CardView
-        app:cardBackgroundColor="@color/colorAccent"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="2dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_margin="5dp"
+        app:cardBackgroundColor="@color/colorAccent"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="2dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,12 +25,12 @@
                 android:orientation="vertical">
 
                 <androidx.cardview.widget.CardView
-                    app:cardBackgroundColor="@android:color/white"
-                    app:cardCornerRadius="5dp"
-                    app:cardElevation="2dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="4dp">
+                    android:layout_margin="4dp"
+                    app:cardBackgroundColor="@android:color/white"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="2dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -59,12 +59,12 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    app:cardBackgroundColor="@color/colorAccent"
-                    app:cardCornerRadius="5dp"
-                    app:cardElevation="2dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="2dp">
+                    android:layout_margin="2dp"
+                    app:cardBackgroundColor="@color/colorAccent"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="2dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -72,65 +72,67 @@
                         android:orientation="horizontal">
 
                         <androidx.cardview.widget.CardView
+                            android:layout_width="wrap_content"
+                            android:layout_height="200dp"
+                            android:layout_margin="2dp"
+                            android:layout_weight="@integer/google_play_services_version"
                             app:cardBackgroundColor="@android:color/white"
                             app:cardCornerRadius="5dp"
-                            app:cardElevation="2dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="2dp"
-                            android:layout_weight="@integer/google_play_services_version">
+                            app:cardElevation="2dp">
 
                             <FrameLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content">
+                                android:layout_height="match_parent">
 
                                 <ImageView
                                     android:id="@+id/homechildFirstLike_Iv"
-                                    android:layout_width="25dp"
-                                    android:layout_height="25dp"
+                                    android:layout_width="30dp"
+                                    android:layout_height="30dp"
                                     android:layout_margin="5dp"
                                     android:src="@drawable/unlike" />
 
                                 <ImageView
                                     android:id="@+id/homechildFistImage_Iv"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="200dp"
-                                    android:layout_gravity="center"
+                                    android:layout_width="120dp"
+                                    android:layout_height="120dp"
+                                    android:layout_gravity="center_horizontal|center"
                                     android:scaleType="centerInside"
-                                    android:src="@mipmap/ic_launcher" />
+                                    android:src="@mipmap/ic_launcher"
+                                    app:srcCompat="@mipmap/ic_photo" />
 
                             </FrameLayout>
 
                         </androidx.cardview.widget.CardView>
 
                         <androidx.cardview.widget.CardView
+                            android:layout_width="wrap_content"
+                            android:layout_height="200dp"
+                            android:layout_margin="2dp"
+                            android:layout_weight="@integer/google_play_services_version"
                             app:cardBackgroundColor="@android:color/white"
                             app:cardCornerRadius="5dp"
-                            app:cardElevation="2dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="2dp"
-                            android:layout_weight="@integer/google_play_services_version">
+                            app:cardElevation="2dp">
 
 
                             <FrameLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content">
+                                android:layout_height="match_parent">
 
                                 <ImageView
                                     android:id="@+id/homechildSecondLike_Iv"
-                                    android:layout_width="25dp"
-                                    android:layout_height="25dp"
+                                    android:layout_width="30dp"
+                                    android:layout_height="30dp"
                                     android:layout_margin="5dp"
                                     android:src="@drawable/unlike" />
 
                                 <ImageView
                                     android:id="@+id/homechildSecondImage_Iv"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="200dp"
-                                    android:layout_gravity="center"
+                                    android:layout_width="120dp"
+                                    android:layout_height="120dp"
+                                    android:layout_gravity="center_horizontal|center"
                                     android:scaleType="centerInside"
-                                    android:src="@mipmap/ic_launcher" />
+                                    android:src="@mipmap/ic_launcher"
+                                    app:srcCompat="@mipmap/ic_photo" />
 
                             </FrameLayout>
 
@@ -142,12 +144,12 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    app:cardBackgroundColor="@android:color/white"
-                    app:cardCornerRadius="5dp"
-                    app:cardElevation="2dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="4dp">
+                    android:layout_margin="4dp"
+                    app:cardBackgroundColor="@android:color/white"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="2dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
