--- a/app/src/main/res/layout/fragment_other_profile.xml
+++ b/app/src/main/res/layout/fragment_other_profile.xml
@@ -51,7 +51,7 @@
                         android:layout_marginBottom="10dp"
                         android:gravity="center"
                         android:text="0"
-                        android:textColor="@color/colorBlue"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="16sp" />
 
                     <Button
@@ -82,8 +82,8 @@
                         android:layout_marginBottom="10dp"
                         android:gravity="center"
                         android:text="0"
-                        android:textColor="@color/colorBlue"
-                        android:textSize="16sp"/>
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="16sp" />
 
                     <Button
                         android:id="@+id/otherprofileFollow_Btn"
@@ -108,7 +108,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:background="@color/profileNumber_Btn"
+                android:background="@drawable/button_background"
                 android:textColor="@color/colorBlack" />
         </LinearLayout>
 
